--- a/storeend/orderdispatcher/dispconf.conf
+++ b/storeend/orderdispatcher/dispconf.conf
@@ -1,7 +1,9 @@
 [orders]
 ordersurl = http://192.168.1.170/os/getorders
 
-
 [kafka]
 topic = TutorialTopic
 bootstrap = ["192.168.1.170:9092"]
+
+[OTLPSpanExporter]
+oltpExporterEndpoint = http://192.168.1.170:4318/v1/traces
