--- a/webfront/ordersvc/ordsvc.conf
+++ b/webfront/ordersvc/ordsvc.conf
@@ -1,6 +1,9 @@
 [postgres]
-database = template1
+database = world
 user = postgres
-password = secret
+password = H0peless!
 host = 192.168.1.170
 port = 5432
+
+[OTLPSpanExporter]
+oltpExporterEndpoint = http://192.168.1.170:4318/v1/traces
