--- a/webfront/ordersvc/webserver.conf
+++ b/webfront/ordersvc/webserver.conf
@@ -3,6 +3,9 @@ server.socket_host = 0.0.0.0
 server.socket_port = 8090
 server.thread_pool = 10
 
+[OTLPSpanExporter]
+oltpExporterEndpoint = http://192.168.1.170:4318/v1/traces
+
 ['/']
 request.dispatch = cherrypy.dispatch.MethodDispatcher()
 'cors.expose.on': True
