--- a/webfront/compose.yml
+++ b/webfront/compose.yml
@@ -1,5 +1,6 @@
 volumes:
      postgres_data:
+     solr:
 services:
   haproxy:
     image: htotapally/haproxy
@@ -17,18 +18,15 @@ services:
     container_name: prodprovider
     ports:
       - "${productservicesrc}:${productservicedst}"
-  postgres:
-    image: htotapally/sml-postgres-db
-    container_name: postgres
-    network_mode: "host"
-    environment:
-      POSTGRES_USER: ${POSTGRES_USER}
-      POSTGRES_DB: ${POSTGRES_DB}
-      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
-    volumes:
-      - postgres_data:/var/lib/postgresql/data    
   orderservice:
     image: htotapally/orderservice
     container_name: orderservice
     ports:
       - "${orderservicesrc}:${orderservicedst}"
+  solr:
+    image: htotapally/smlsolr
+    container_name: smlsolr2
+    volumes:
+      - solr:/var/solr
+    ports:
+      - "${solrhost}:${solrdest}"
