--- a/webfront/.env
+++ b/webfront/.env
@@ -9,7 +9,7 @@ productservicedst=8080
 orderservicesrc=8090
 orderservicedst=8090
 POSTGRES_USER=postgres
-POSTGRES_DB=hopelessworld
-POSTGRES_PASSWORD=H0peless!
+POSTGRES_DB=<REPLACEME>
+POSTGRES_PASSWORD=<REPLACEME>
 solrhost=8983
 solrdest=8983
