--- a/webfront/.env
+++ b/webfront/.env
@@ -9,7 +9,10 @@ productservicedst=8080
 orderservicesrc=8090
 orderservicedst=8090
 POSTGRES_USER=postgres
-POSTGRES_DB=<REPLACEME>
-POSTGRES_PASSWORD=<REPLACEME>
+POSTGRES_DB=world
+POSTGRES_PASSWORD=H0peless!
+postgressrc=5432
+postgresdest=5432
 solrhost=8983
 solrdest=8983
+COLLECTOR_ZIPKIN_HOST_PORT=9411
