--- a/webfront/.env
+++ b/webfront/.env
@@ -10,7 +10,7 @@ orderservicesrc=8090
 orderservicedst=8090
 POSTGRES_USER=postgres
 POSTGRES_DB=world
-POSTGRES_PASSWORD=H0peless!
+POSTGRES_PASSWORD=<REPLACEME>
 postgressrc=5432
 postgresdest=5432
 solrhost=8983
