--- a/webfront/compose.yml
+++ b/webfront/compose.yml
@@ -1,7 +1,3 @@
-volumes:
-     pgdata:
-     solr:
-     jaeger:
 services:
   haproxy:
     image: htotapally/haproxy
@@ -11,51 +7,11 @@ services:
       - "${haproxyadminsrc}:${haproxyadminsrc}"
   webfrontend:
     image: htotapally/sml-apach2
-    container_name: sml-apach2
+    container_name: sml-apache2
     ports:
       - "${webfrontendsrc}:${webfrontenddst}"      
-  productservice:
-    image: htotapally/prodprovider
-    container_name: prodprovider
+  reportsvc:
+    image: htotapally/reportsvc
+    container_name: reportsvc
     ports:
-      - "${productservicesrc}:${productservicedst}"
-  postgres:
-    image: htotapally/sml-postgres-db
-    container_name: smlpostgres
-    environment:
-      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
-      - POSTGRES_USER=${POSTGRES_USER}
-      - POSTGRES_DB=${POSTGRES_DB}
-    volumes:
-      - pgdata:/var/lib/postgresql/data
-    network_mode: host
-    ports:
-      - "${postgressrc}:${postgresdest}"
-  orderservice:
-    image: htotapally/orderservice
-    container_name: orderservice
-    ports:
-      - "${orderservicesrc}:${orderservicedst}"
-  solr:
-    image: htotapally/smlsolr
-    container_name: smlsolr2
-    volumes:
-      - solr:/var/solr
-    ports:
-      - "${solrhost}:${solrdest}"
-
-  jaeger:
-    image: jaegertracing/all-in-one:latest
-    container_name: jaeger
-    ports:
-      - 4317:4317
-      - 4318:4318
-      - 5775:5775/udp
-      - 6831:6831/udp
-      - 6832:6832/udp
-      - 5778:5778
-      - 16686:16686
-      - 14250:14250
-      - 14268:14268
-      - 14269:14269
-      - 9411:9411
+      - "${reportsvcsrc}:${reportsvcdst}"
