--- a/webfront/.env
+++ b/webfront/.env
@@ -4,6 +4,10 @@ haproxyadminsrc=8404
 haproxyadmindst=8404
 webfrontendsrc=8081
 webfrontenddst=80
+
+reportsvcsrc=3001
+reportsvcdst=3001
+
 productservicesrc=8080
 productservicedst=8080
 orderservicesrc=8090
