--- a/webfront/.env
+++ b/webfront/.env
@@ -1,22 +1,29 @@
 haproxysrc=80
 haproxydst=80
+
 haproxyadminsrc=8404
 haproxyadmindst=8404
-webfrontendsrc=8081
+
+webfrontendsrc=8089
 webfrontenddst=80
 
 reportsvcsrc=3001
 reportsvcdst=3001
 
-productservicesrc=8080
-productservicedst=8080
-orderservicesrc=8090
-orderservicedst=8090
+productsvcsrc=3000
+productsvcdst=3000
+
+ordersvcsrc=3002
+ordersvcdst=3000
+
 POSTGRES_USER=postgres
 POSTGRES_DB=world
 POSTGRES_PASSWORD=<REPLACEME>
 postgressrc=5432
 postgresdest=5432
+
 solrhost=8983
 solrdest=8983
+
 COLLECTOR_ZIPKIN_HOST_PORT=9411
+~                                      
