--- a/webfront/compose.yml
+++ b/webfront/compose.yml
@@ -1,3 +1,6 @@
+volumes:
+  solr:
+  pgdata:
 services:
   haproxy:
     image: htotapally/haproxy
@@ -6,7 +9,7 @@ services:
       - "${haproxysrc}:${haproxydst}"
       - "${haproxyadminsrc}:${haproxyadminsrc}"
   webfrontend:
-    image: htotapally/sml-apach2
+    image: htotapally/sml-apache2
     container_name: sml-apache2
     ports:
       - "${webfrontendsrc}:${webfrontenddst}"      
@@ -25,3 +28,21 @@ services:
     container_name: ordersvc
     ports:
       - "${ordersvcsrc}:${ordersvcdst}"
+  solr:
+    image: htotapally/smlsolr
+    container_name: smlsolr
+    volumes:
+      - solr:/var/solr
+    ports:
+      - "${solrhost}:${solrdest}"
+  postgres:
+    image: htotapally/sml-postgres-db
+    container_name: smlpostgres
+    environment:
+      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
+      - POSTGRES_USER=${POSTGRES_USER}
+      - POSTGRES_DB=${POSTGRES_DB}
+    volumes:
+      - pgdata:/var/lib/postgresql/data
+    ports:
+      - "${postgressrc}:${postgresdest}"
