--- a/webfront/.env
+++ b/webfront/.env
@@ -16,9 +16,9 @@ productsvcdst=3000
 ordersvcsrc=3002
 ordersvcdst=3000
 
-POSTGRES_USER=postgres
-POSTGRES_DB=world
-POSTGRES_PASSWORD=<REPLACEME>
+POSTGRES_USER=storov_user
+POSTGRES_DB=jsl
+POSTGRES_PASSWORD=justskipline123
 postgressrc=5432
 postgresdest=5432
 
@@ -26,4 +26,3 @@ solrhost=8983
 solrdest=8983
 
 COLLECTOR_ZIPKIN_HOST_PORT=9411
-~                                      
